--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <div class="actions">
             <button class="btn" onclick="generateCatArt()">Generate</button>
             <button class="btn copy" onclick="copyToClipboard()" id="copyButton" style="display:none;" title="Copy">
-                <span>&#x2398;</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                </svg>
             </button>
         </div>
     </div>
